[package]
name = "bililive_dynamic_repost"
version = "0.1.0"
edition = "2024"

[dependencies]
bpi-rs = "0.1.1"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = "1.48.0"
toml = "0.9.8"
tracing = { version = "0.1.43", features = ["max_level_info", "std"] }
unescape = "0.1.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
chrono = "0.4.42"
rand = "0.9.2"
